Add: Acceleration and decceleration in path following, target heading behavior for next path point