@@ -2,13 +2,9 @@ package frc.robot.vortex;
 
 import java.util.ArrayList;
 
-import edu.wpi.first.math.Pair;
-import edu.wpi.first.math.geometry.Pose2d;
+import edu.wpi.first.math.MathUtil;
 import edu.wpi.first.math.geometry.Translation2d;
 import edu.wpi.first.math.kinematics.ChassisSpeeds;
-import edu.wpi.first.math.trajectory.TrapezoidProfile;
-import edu.wpi.first.math.trajectory.TrapezoidProfile.Constraints;
-import edu.wpi.first.math.trajectory.TrapezoidProfile.State;
 import edu.wpi.first.wpilibj.Timer;
 import edu.wpi.first.wpilibj2.command.Command;
 import frc.robot.Constants;
@@ -16,41 +12,47 @@ import frc.robot.subsystems.drive.SwerveDrive;
 
 public class FollowPath extends Command {
 
-    private SwerveDrive swerveDrive;
-    private Pair<ArrayList<PathPoint>,Boolean> path;
+    private SwerveDrive swerve;
+    private ArrayList<PathPoint> path;
 
-    private boolean pathIsValid;
-    private boolean forceValid;
     private boolean isFinished;
-    private boolean finishOnceDone;
 
     private Timer elapsedTimer;
     private double lastUpdateTimestamp;
 
     private double pathProgress;
-    private boolean followPath;
-    
-    private Pose2d theoreticalPose;
-    private Pose2d targetPose;
+    private double pathLength;
+    private double initialVelocity;
     private double targetVelocity;
+    private double maxVelocity;
+    private double usableVelocity;
 
-    public FollowPath(ArrayList<PathPoint> path, SwerveDrive swerve) {
+    private double acclerationEndT;
+    private double decelerationStartT;
+
+    public FollowPath(ArrayList<PathPoint> path, double exitVelocity, double maxVelocity, SwerveDrive swerve) {
+        this.path = path;
+        this.swerve = swerve;
         this.isFinished = false;
         this.elapsedTimer = new Timer();
-
-        this.targetVelocity = Constants.Chassis.kMaxSpeed * 0.2; // Max Speed Wanted to reach, make clamp of distanceTo start/finish
+        this.targetVelocity = MathUtil.clamp(exitVelocity, 0.0, Constants.Chassis.kMaxSpeed);
+        
+        this.pathLength = 0;
+        PVector prev = path.get(0), next;
+        for (int i = 1; i <= Constants.PathGeneration.kLengthApproximationSegments; i++) {
+            next = catmullRomSpline(i / Constants.PathGeneration.kLengthApproximationSegments);
+            this.pathLength += prev.distanceTo(next);
+            prev = next;
+        }
 
         addRequirements(swerve);
     }
 
     @Override
     public void initialize() {
-        this.path = PathGeneration.generatePath(null, null, swerveDrive);
-        pathIsValid = this.path.getSecond().booleanValue() || forceValid;
-        if (!pathIsValid) {
-            elapsedTimer.restart();
-            followPath = false;
-        }
+        this.initialVelocity = getCurrentVelocityMagnitude();
+        this.acclerationEndT = 1 - (Math.pow(maxVelocity - initialVelocity, 2) / Constants.Chassis.kMaxAcceleration / pathLength);
+        this.acclerationEndT = (Math.pow(maxVelocity, 2) / Constants.Chassis.kMaxDecceleration) / pathLength;
     }
 
     @Override
@@ -58,7 +60,7 @@ public class FollowPath extends Command {
 
         // Path completion behavior
         if (pathProgress >= 1.0) {
-            swerveDrive.setChassisSpeeds(new ChassisSpeeds(0,0,0));
+            swerve.setChassisSpeeds(new ChassisSpeeds(0,0,0));
             isFinished = true;
             return;
         }
@@ -69,22 +71,32 @@ public class FollowPath extends Command {
             lastUpdateTimestamp = elapsedTimer.get();
         }
 
+        // get velocity
+        usableVelocity = getCurrentVelocityMagnitude();
+        //prioritize slowing down in cases where path lenght is too low and starting & stopping distances overlap
+        if (pathProgress > decelerationStartT) {
+            usableVelocity -= Constants.Chassis.kMaxDecceleration * 0.01; // averge velocity over 20ms
+            targetVelocity = usableVelocity - Constants.Chassis.kMaxAcceleration * 0.01;
+        } else if (pathProgress < acclerationEndT) {
+            usableVelocity += Constants.Chassis.kMaxAcceleration * 0.01;
+            targetVelocity = usableVelocity + Constants.Chassis.kMaxAcceleration * 0.01;
+        } else targetVelocity = maxVelocity;
+        
         // calculate predictive secant step along spline path through path points 
-        double dt = findStepForLength(pathProgress, targetVelocity, 0,1);
+        double dt = findStepForLength(pathProgress, usableVelocity, 0,1);
         PVector currentPosition = catmullRomSpline(pathProgress);
         PVector targetPos = catmullRomSpline(pathProgress + dt);
         
         // get actual 
         PVector deltaMove = targetPos.minus(currentPosition);
-        ChassisSpeeds currentChassisSpeeds = swerveDrive.getChassisSpeeds();
-        PVector deltaV = deltaMove.norm().scalar(
-            new PVector(currentChassisSpeeds.vxMetersPerSecond, currentChassisSpeeds.vyMetersPerSecond).distanceTo(PVector.kOrigin));
+        PVector deltaV = deltaMove.norm().scalar(targetVelocity);
         
-        swerveDrive.drive(
+        swerve.drive(
             new Translation2d(deltaV.x, deltaV.y),
             0d,
             true, 
             false);
+        swerve.setTargetHeading(getNextPoint(pathProgress).rotationTarget);
     }
 
     private PVector catmullRomPoint(double t, PVector p0, PVector p1, PVector p2, PVector p3) {
@@ -104,42 +116,39 @@ public class FollowPath extends Command {
 
     // returns the x and y coordinates for a point on a catmull rom spline at progress t 0-1
     public PVector catmullRomSpline(double t) {
-        if (path.getFirst().size() < 4) {
-            if (path.getFirst().isEmpty()) return PVector.kOrigin;
-            else return path.getFirst().get(0);
+        if (path.size() < 4) {
+            if (path.isEmpty()) return PVector.kOrigin;
+            else return path.get(0);
         }
 
-        int numSegments = path.getFirst().size() - 3;
+        int numSegments = path.size() - 3;
         double tSegment = t*((double)numSegments);
         int idxSegment = ((int)tSegment);
         double tLocal = tSegment - idxSegment;
 
         idxSegment = Math.min(idxSegment, numSegments-1);
 
-        PVector p0 = path.getFirst().get(idxSegment);
-        PVector p1 = path.getFirst().get(idxSegment+1);
-        PVector p2 = path.getFirst().get(idxSegment+2);
-        PVector p3 = path.getFirst().get(idxSegment+3);
+        PVector p0 = path.get(idxSegment);
+        PVector p1 = path.get(idxSegment+1);
+        PVector p2 = path.get(idxSegment+2);
+        PVector p3 = path.get(idxSegment+3);
 
         return catmullRomPoint(tLocal, p0, p1, p2, p3);
     }
 
-    public Pair<PVector,PVector> getBetweenPoints(double t) {
-        if (path.getFirst().size() < 4) {
-            if (path.getFirst().isEmpty()) return new Pair<PVector,PVector>(PVector.kOrigin,PVector.kOrigin);
-            else return new Pair<PVector,PVector>(path.getFirst().get(0),path.getFirst().get(1));
+    public PathPoint getNextPoint(double t) {
+        if (path.size() < 4) {
+            if (path.isEmpty()) return (PathPoint) PVector.kOrigin;
+            else return path.get(0);
         }
 
-        int numSegments = path.getFirst().size() - 3;
+        int numSegments = path.size() - 3;
         double tSegment = t*((double)numSegments);
         int idxSegment = ((int)tSegment);
 
         idxSegment = Math.min(idxSegment, numSegments-1);
 
-        return new Pair<PVector,PVector>(
-            path.getFirst().get(idxSegment+1), 
-            path.getFirst().get(idxSegment+2)
-        );
+        return path.get(idxSegment+2);
     }
 
     
@@ -201,13 +210,20 @@ public class FollowPath extends Command {
                     previousError = candidateError;
                 }
             }
-        }  
+        }
         return currentStep;
+    }
+
+    private double getCurrentVelocityMagnitude() {
+        ChassisSpeeds speeds = swerve.getChassisSpeeds();
+        return Math.sqrt(
+            speeds.vxMetersPerSecond*speeds.vxMetersPerSecond 
+            + speeds.vyMetersPerSecond*speeds.vyMetersPerSecond);
     }
     
     @Override
     public void end(boolean interrupted) {
-        swerveDrive.setChassisSpeeds(new ChassisSpeeds());
+        swerve.setChassisSpeeds(new ChassisSpeeds());
     }
 
     @Override
